# graphics

./: .gitignore  CMakeLists.txt  README.md
common/: controls.cpp  controls.hpp  objloader.cpp  objloader.hpp  shader.cpp  shader.hpp
hw1/: README.md  hw1  main.cpp
hw1/report/: hw1.tex
hw1/shader/: shader_source.hpp
hw2/: hw2  main.cpp
hw2/report/: hw2.tex
hw2/shader/: Basic.vert  LightShading.frag
hw3/: bsp.h  hw3  knight.txt  main.cpp  sample.txt  spline.h  surface.h
hw3/shader/: Basic.vert  LightShading.frag
hw4/: coke_bottle.txt  main.cpp  sample.txt  surface.h
hw4/report/: hw3.tex  hw4.tex
hw4/shader/: Basic.vert  LightShading.frag
utility/: embedfile.cpp
